2020-10-05  Alex Christensen  <achristensen@webkit.org>

        Don't NFC normalize strings from blobs
        https://bugs.webkit.org/show_bug.cgi?id=217327

        Reviewed by Sam Weinig.

        * web-platform-tests/FileAPI/unicode-expected.txt:

2020-10-05  Rob Buis  <rbuis@igalia.com>

        WebKit doesn't parse "#" as delimiter for fragment identifier in data URIs
        https://bugs.webkit.org/show_bug.cgi?id=68089

        Reviewed by Alex Christensen, Ryosuke Niwa, and Darin Adler.

        Update improved test results.

        * web-platform-tests/fetch/data-urls/processing.any-expected.txt:
        * web-platform-tests/fetch/data-urls/processing.any.worker-expected.txt:
        * web-platform-tests/url/data-uri-fragment-expected.txt:

2020-10-05  Sergio Villar Senin  <svillar@igalia.com>

        [css-flex] Fix expectations of a test which is actually passing
        https://bugs.webkit.org/show_bug.cgi?id=217318

        Reviewed by Manuel Rego Casasnovas.

        * web-platform-tests/css/css-flexbox/padding-overflow-crash-expected.html: Added a missing " only"
        to match the string used in the test.

2020-10-05  Antoine Quint  <graouts@webkit.org>

        Add non-animated support for the CSS rotate property
        https://bugs.webkit.org/show_bug.cgi?id=217320
        <rdar://problem/69956248>

        Reviewed by Dean Jackson.

        WPT progressions showing the correct parsing and computed style output of a non-animated "rotate" property.

        * web-platform-tests/css/css-cascade/all-prop-initial-xml-expected.txt:
        * web-platform-tests/css/css-transforms/animation/rotate-composition-expected.txt:
        * web-platform-tests/css/css-transforms/animation/rotate-interpolation-expected.txt:
        * web-platform-tests/css/css-transforms/parsing/rotate-parsing-valid-expected.txt:
        * web-platform-tests/css/cssom/cssstyledeclaration-csstext-expected.txt:

2020-10-05  Alex Christensen  <achristensen@webkit.org>
