@@ -1,3 +1,12 @@
+2020-10-06  Youenn Fablet  <youenn@apple.com>
+
+        In case all tracks are ended, enqueue a task to stop recording instead of stopping recording
+        https://bugs.webkit.org/show_bug.cgi?id=217372
+
+        Reviewed by Eric Carlson.
+
+        * web-platform-tests/mediacapture-record/MediaRecorder-stop-expected.txt:
+
 2020-10-05  Alex Christensen  <achristensen@webkit.org>
 
         Don't NFC normalize strings from blobs
